# qr_stencil_creator

./: .dockerignore  .gitattributes  .gitignore  README.md  compose.yaml  dockerfile  dockerfile.www  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker.yaml  lockfiles.yaml  pypi.yaml  pytest.yaml  ruff.yaml
docker/www/: prestart.sh
docs/dev/: README.md  api.md  cli.md  docker.md  settings.md
qr_stencil/: cli.py  www.py
qr_stencil/conf/: settings.py
qr_stencil/static/: index.html
qr_stencil/templates/: index.html
qr_stencil/utils/: qr.py
