[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "Robert Hafner"}]
dependencies = [
  "fastapi",
  "pydantic~=2.0",
  "pydantic-settings",
  "qrcode",
  "typer",
]
description = ""
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "qr_stencil"
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
  "build",
  "dapperdata",
  "glom",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "toml-sort",
  "uv",
]

[project.scripts]
qr_stencil = "qr_stencil.cli:app"

[tool.coverage.run]
omit = [
  "./qr_stencil/_version.py",
  "./qr_stencil/__init__.py",
  "./tests/*",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
exclude = [".venv", "./qr_stencil/_version.py"]
line-length = 120

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
qr_stencil = ["py.typed"]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "qr_stencil/_version.py"
